// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AsideLayout aside style overrides 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-34rq4a=""
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          style={
            Object {
              "background": "red",
              "height": "50px",
              "width": "700px",
            }
          }
        >
          Fixed width thing
        </div>
      </div>
      <div
        data-css-63wt92=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout asidePosition: first 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-34rq4a=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-63wt92=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout asidePosition: last 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-t8ydvh=""
    >
      <div
        data-css-qxcmpd=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-63wt92=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout short aside content 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-34rq4a=""
      >
        Very short
      </div>
      <div
        data-css-63wt92=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout short main content 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-34rq4a=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-63wt92=""
      >
        Very little
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AsideLayout wide, fixed aside content 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-34rq4a=""
      >
        <div
          style={
            Object {
              "background": "red",
              "height": "50px",
              "width": "700px",
            }
          }
        >
          Fixed width thing
        </div>
      </div>
      <div
        data-css-63wt92=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout custom markup 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <ul
      data-css-oo8nrq=""
      style={
        Object {
          "listStyle": "none",
        }
      }
    >
      <li
        data-css-18p75qs=""
      >
        First child
      </li>
      <li
        data-css-18p75qs=""
      >
        Second child
      </li>
      <li
        data-css-18p75qs=""
      >
        Third child
      </li>
      <li
        data-css-18p75qs=""
      >
        Fourth child
      </li>
      <li
        data-css-18p75qs=""
      >
        Fifth child
      </li>
      <li
        data-css-18p75qs=""
      >
        Sixth child
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout four 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        First child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout six 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        First child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout three 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        First child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EqualColumnLayout two 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        First child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#e80a89",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PageHeadingLayout default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-yto836=""
  >
    <div
      data-css-wlfhsa=""
    >
      <h2
        data-css-10w3axr=""
        size="large"
      >
        My Page
      </h2>
    </div>
    My content
  </div>
</div>
`;

exports[`Storyshots PageHeadingLayout long title 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-yto836=""
  >
    <div
      data-css-wlfhsa=""
    >
      <h2
        data-css-10w3axr=""
        size="large"
      >
        My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
      </h2>
    </div>
    My content
  </div>
</div>
`;

exports[`Storyshots PageHeadingLayout long title w/ actions 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-yto836=""
  >
    <div
      data-css-wlfhsa=""
    >
      <h2
        data-css-10w3axr=""
        size="large"
      >
        My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
      </h2>
      <div
        data-css-1cnar9w=""
      >
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
      </div>
    </div>
    My content
  </div>
</div>
`;

exports[`Storyshots PageHeadingLayout long titlew/ lots of actions 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-yto836=""
  >
    <div
      data-css-wlfhsa=""
    >
      <h2
        data-css-10w3axr=""
        size="large"
      >
        My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
      </h2>
      <div
        data-css-1cnar9w=""
      >
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
      </div>
    </div>
    My content
  </div>
</div>
`;

exports[`Storyshots PageHeadingLayout w/ actions 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-yto836=""
  >
    <div
      data-css-wlfhsa=""
    >
      <h2
        data-css-10w3axr=""
        size="large"
      >
        My Page
      </h2>
      <div
        data-css-1cnar9w=""
      >
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
      </div>
    </div>
    My content
  </div>
</div>
`;

exports[`Storyshots PageHeadingLayout w/ lots of actions 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-yto836=""
  >
    <div
      data-css-wlfhsa=""
    >
      <h2
        data-css-10w3axr=""
        size="large"
      >
        My Page
      </h2>
      <div
        data-css-1cnar9w=""
      >
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
        <button
          data-css-k922kt=""
          disabled={false}
          style={Object {}}
        >
          <span
            data-css-15b13by=""
          >
            Wow, an action
          </span>
        </button>
        <a
          data-css-1skajya=""
          href="https://duckduckgo.com"
        >
          A link
        </a>
      </div>
    </div>
    My content
  </div>
</div>
`;
